tests/snapshots/token__function.snap
---
source: tests/token.rs
expression: tokenize(&input)
---
[
    Fn("fn", 0..2),
    Ident("test", 3..7),
    ParenL("(", 7..8),
    ParenR(")", 8..9),
    Do("do", 10..12),
    End("end", 13..16),
]
