tests/snapshots/token__function_body.snap
---
source: tests/token.rs
expression: tokenize(&input)
---
[
    Fn("fn", 0..2),
    Ident("test", 3..7),
    ParenL("(", 7..8),
    ParenR(")", 8..9),
    Do("do", 10..12),
    Integer("1", 17..18),
    Plus("+", 19..20),
    Integer("1", 21..22),
    End("end", 23..26),
]
